--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,9 @@ cffi==1.15.0
 charset-normalizer==2.0.12
 cryptography==36.0.1
 defusedxml==0.7.1
-Django==3.2.12
+Django==4.0.3
 django-allauth==0.49.0
+django-cors-headers==3.11.0
 django-crispy-forms==1.14.0
 gunicorn==20.1.0
 idna==3.3
@@ -23,4 +24,5 @@ social-auth-core==4.2.0
 sqlparse==0.4.2
 tzdata==2021.5
 urllib3==1.26.8
+waitress==2.1.0
 whitenoise==6.0.0
